--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -455,6 +455,8 @@ items:
       name: Vue d'ensemble
     - uid: tutorials/publish-to-azure-webapp-using-vs
       name: Publier avec Visual Studio
+    - name: Publier avec Visual Studio pour Mac
+      href: /visualstudio/mac/publish-app-svc
     - name: Publier avec les outils CLI
       href: /azure/app-service/app-service-web-tutorial-dotnetcore-sqldb
     - uid: host-and-deploy/azure-apps/azure-continuous-deployment
@@ -523,6 +525,8 @@ items:
     name: Héberger dans une batterie de serveurs web
   - uid: host-and-deploy/visual-studio-publish-profiles
     name: Profils de publication Visual Studio
+  - name: Visual Studio pour Mac - Publier dans un dossier
+    href: /visualstudio/mac/publish-folder
   - uid: host-and-deploy/directory-structure
     name: Structure de répertoires
   - uid: host-and-deploy/health-checks
@@ -539,6 +543,8 @@ items:
       name: Ajouter un modèle automatique d’identité
     - uid: security/authentication/add-user-data
       name: Ajouter des données utilisateur personnalisées pour l’identité
+    - uid: security/authentication/samples
+      name: Exemples d’authentification
     - uid: security/authentication/customize_identity_model
       name: Personnaliser l’identité
     - uid: security/authentication/community
@@ -806,9 +812,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.1
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: 4f8ccb592b7f95794cad01edd1e0f514bd9943c1
-ms.sourcegitcommit: d5223cf6a2cf80b4f5dc54169b0e376d493d2d3a
+ms.openlocfilehash: a6169489db7d7365e254c8f1213de348a4429c49
+ms.sourcegitcommit: e7276930515216338a33c4a03c0d7a87fc718ffe
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54892992"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55293516"
