--- a/aspnet/toc.yml
+++ b/aspnet/toc.yml
@@ -3,7 +3,7 @@ items:
   href: /aspnet/#pivot=aspnet
 - name: Vue d’ensemble d’ASP.NET
   href: overview.md
-- name: Tutoriels
+- name: Didacticiels
   href: tutorials.md
 - name: Web Forms
   href: web-forms/index.md
@@ -2135,8 +2135,6 @@ items:
           href: mvc/overview/getting-started/database-first-development/customizing-a-view.md
         - name: Amélioration de la validation des données
           href: mvc/overview/getting-started/database-first-development/enhancing-data-validation.md
-        - name: Publier sur Azure
-          href: mvc/overview/getting-started/database-first-development/publish-to-azure.md
       - name: Cycle de vie d’une application ASP.NET MVC 5
         href: mvc/overview/getting-started/lifecycle-of-an-aspnet-mvc-5-application.md
       - name: Ressources recommandées pour MVC
@@ -3812,9 +3810,9 @@ items:
     href: whitepapers/whats-new-in-aspnet-45-and-visual-studio-2012.md
 - name: Informations de référence sur les API
   href: api-ref.md
-ms.openlocfilehash: e96b99f5a6432ae359e1b8543701e4e2d49171a4
-ms.sourcegitcommit: 42a8164b8aba21f322ffefacb92301bdfb4d3c2d
+ms.openlocfilehash: 32bc0de99f07ad72d4b09dd29ac3f316609b0c69
+ms.sourcegitcommit: ed76cc752966c604a795fbc56d5a71d16ded0b58
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "55291171"
+ms.lasthandoff: 02/02/2019
+ms.locfileid: "55667828"
