--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -92,10 +92,11 @@ items:
   - name: Pages Razor
     items:
     - uid: razor-pages/index
-      name: Vue d'ensemble
-    - uid: tutorials/razor-pages/index
-      name: Didacticiel
+      name: Introduction
+    - name: Didacticiel
       items:
+      - uid: tutorials/razor-pages/index
+        name: Vue d'ensemble
       - uid: tutorials/razor-pages/razor-pages-start
         name: Prise en main
       - uid: tutorials/razor-pages/model
@@ -165,6 +166,8 @@ items:
       name: Injection de dépendances - vues
     - uid: mvc/controllers/testing
       name: Test unitaire
+  - uid: razor-components/index
+    name: Composants Razor
   - uid: fundamentals/app-state
     name: État de session et d’application
   - name: Tag Helpers
@@ -433,6 +436,38 @@ items:
     name: Concaténer et minifier
   - uid: client-side/using-browserlink
     name: Lien du navigateur
+  - name: Composants Razor
+    items:
+    - uid: razor-components/index
+      name: Vue d'ensemble
+    - uid: razor-components/faq
+      name: FAQ
+    - uid: razor-components/get-started
+      name: Prise en main
+    - uid: tutorials/first-blazor-app
+      name: Créer votre première application
+    - uid: razor-components/components
+      name: Composants
+    - uid: razor-components/class-libraries
+      name: Bibliothèques de composants
+    - uid: razor-components/layouts
+      name: Dispositions
+    - uid: razor-components/dependency-injection
+      name: Injection de dépendances
+    - uid: razor-components/routing
+      name: Routage
+    - uid: razor-components/javascript-interop
+      name: Interopérabilité de JavaScript
+    - uid: razor-components/debug
+      name: Débogage
+    - uid: razor-components/hosting-models
+      name: Modèles d'hébergement
+    - name: Héberger et déployer
+      items:
+      - uid: host-and-deploy/razor-components/index
+        name: Vue d'ensemble
+      - uid: host-and-deploy/razor-components/configure-linker
+        name: Configurer l'éditeur de liens
   - name: Applications monopages
     items:
     - uid: spa/index
@@ -531,6 +566,12 @@ items:
     name: Structure de répertoires
   - uid: host-and-deploy/health-checks
     name: Contrôles d’intégrité
+  - name: Composants Razor
+    items:
+    - uid: host-and-deploy/razor-components/index
+      name: Vue d'ensemble
+    - uid: host-and-deploy/razor-components/configure-linker
+      name: Configurer l'éditeur de liens
 - name: Sécurité et identité
   items:
   - uid: security/index
@@ -812,9 +853,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.1
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: a6169489db7d7365e254c8f1213de348a4429c49
-ms.sourcegitcommit: e7276930515216338a33c4a03c0d7a87fc718ffe
+ms.openlocfilehash: 75c0220d1dac2fa2a51efd075e05cfd1e5070c8c
+ms.sourcegitcommit: ed76cc752966c604a795fbc56d5a71d16ded0b58
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55293516"
+ms.lasthandoff: 02/02/2019
+ms.locfileid: "55667802"
