--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -558,6 +558,8 @@ items:
       name: Résoudre les problèmes
     - uid: host-and-deploy/azure-iis-errors-reference
       name: Informations de référence sur les erreurs
+    - uid: host-and-deploy/iis/transform-webconfig
+      name: Transformer web.config
   - uid: fundamentals/servers/kestrel
     name: Kestrel
   - uid: fundamentals/servers/httpsys
@@ -878,9 +880,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: 7c9baf2a9e3a800ff9abfcb757ffde039d49a9a4
-ms.sourcegitcommit: af8a6eb5375ef547a52ffae22465e265837aa82b
+ms.openlocfilehash: d2015955147460621d64ea6035f5f8118a02469b
+ms.sourcegitcommit: 6ba5fb1fd0b7f9a6a79085b0ef56206e462094b7
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56159540"
+ms.lasthandoff: 02/14/2019
+ms.locfileid: "56248392"
