--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -326,6 +326,8 @@ items:
     name: Comparer SignalR avec SignalR Core
   - uid: fundamentals/websockets
     name: WebSockets sans SignalR
+  - uid: signalr/diagnostics
+    name: Journalisation et diagnostics
 - name: Tester, déboguer et dépanner
   items:
   - name: Test unitaire
@@ -606,6 +608,8 @@ items:
     items:
     - uid: security/authentication/identity
       name: Présentation d’Identity
+    - uid: security/authentication/identity/spa
+      name: Identité avec SPA
     - uid: security/authentication/scaffold-identity
       name: Ajouter un modèle automatique d’identité
     - uid: security/authentication/add-user-data
@@ -638,6 +642,8 @@ items:
         name: Autres fournisseurs
       - uid: security/authentication/social/additional-claims
         name: Revendications supplémentaires
+    - uid: security/authentication/policyschemes
+      name: Modèles de stratégie
     - uid: security/authentication/ws-federation
       name: Authentification WS-Federation
     - uid: security/authentication/accconfirm
@@ -814,6 +820,8 @@ items:
   items:
   - uid: fundamentals/middleware/write
     name: Middleware Écriture
+  - uid: fundamentals/middleware/request-response
+    name: Opérations de demande et de réponse
   - uid: fundamentals/url-rewriting
     name: Réécriture d’URL
   - uid: fundamentals/file-providers
@@ -880,9 +888,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: e55cfa30103c2a89007f2bc5e9d133dea7f8c6d5
-ms.sourcegitcommit: b3894b65e313570e97a2ab78b8addd22f427cac8
+ms.openlocfilehash: 51fa497e0de917536dc37684cdebc60dec4c19a5
+ms.sourcegitcommit: 6ddd8a7675c1c1d997c8ab2d4498538e44954cac
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56743996"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57400695"
