--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -27,29 +27,39 @@ items:
     items:
     - uid: tutorials/first-web-api
       name: Créer une API web
+      displayName: tutorial
     - uid: tutorials/first-mongo-app
       name: API Web avec MongoDB
+      displayName: tutorial
     - uid: mobile/native-mobile-backend
       name: Back-end pour mobile
+      displayName: tutorial
   - name: Applications web
     items:
     - uid: tutorials/razor-pages/index
       name: Pages Razor
+      displayName: tutorial
     - uid: tutorials/first-mvc-app/index
       name: MVC
+      displayName: tutorial
   - name: Applications web en temps réel
     items:
     - uid: tutorials/signalr
       name: SignalR avec JavaScript
+      displayName: tutorial
     - uid: tutorials/signalr-typescript-webpack
       name: SignalR avec TypeScript
+      displayName: tutorial
   - name: Accès aux données
     items:
     - uid: data/ef-rp/index
       name: EF Core avec Razor Pages
+      displayName: tutorial
     - name: EF Core avec MVC, base de données existante
+      displayName: tutorial
       href: /ef/core/get-started/aspnetcore/existing-db
     - name: EF Core avec MVC, nouvelle base de données
+      displayName: tutorial
       href: /ef/core/get-started/aspnetcore/new-db
     - uid: data/ef-mvc/index
       name: EF Core avec MVC, long tutoriel
@@ -63,7 +73,7 @@ items:
     name: Injection de dépendances (services)
   - uid: fundamentals/middleware/index
     name: Intergiciel (middleware)
-  - name: L’hôte
+  - name: Hôte
     items:
     - uid: fundamentals/host/web-host
       name: Hôte web
@@ -85,6 +95,7 @@ items:
     name: Gérer les erreurs
   - uid: fundamentals/http-requests
     name: Effectuer des requêtes HTTP
+    displayName: httpclient, httpclientfactory
   - uid: fundamentals/static-files
     name: Fichiers statiques
 - name: Applications web
@@ -263,11 +274,13 @@ items:
   - uid: web-api/advanced/conventions
     name: Conventions
 - name: Applications en temps réel
+  displayName: signalr
   items:
   - uid: signalr/introduction
     name: Vue d’ensemble de SignalR
   - uid: signalr/supported-platforms
     name: Plateformes prises en charge
+    displayName: signalr
   - name: Didacticiels
     items:
     - uid: tutorials/signalr
@@ -275,59 +288,85 @@ items:
     - uid: tutorials/signalr-typescript-webpack
       name: SignalR avec TypeScript
   - name: Exemples
+    displayName: signalr
     href: https://github.com/aspnet/SignalR-samples
   - name: Concepts serveur
+    displayName: signalr
     items:
     - uid: signalr/hubs
       name: Hubs
+      displayName: signalr
     - uid: signalr/hubcontext
       name: Envoyer à partir de l’extérieur d’un hub
+      displayName: signalr
     - uid: signalr/groups
       name: Utilisateurs et groupes
+      displayName: signalr
     - uid: signalr/publish-to-azure-web-app
       name: Publier sur Azure
+      displayName: signalr
     - uid: signalr/api-design
       name: Considérations sur la conception d’API
+      displayName: signalr
   - name: Clients
+    displayName: signalr
     items:
     - uid: signalr/dotnet-client
       name: Client .NET
+      displayName: signalr
     - name: Informations de référence sur l’API .NET
+      displayName: signalr
       href: /dotnet/api/microsoft.aspnetcore.signalr.client
     - uid: signalr/java-client
       name: Client Java
+      displayName: signalr
     - name: Informations de référence sur l’API Java
+      displayName: signalr
       href: /java/api/com.microsoft.signalr?view=aspnet-signalr-java
     - uid: signalr/javascript-client
       name: Client JavaScript
+      displayName: signalr
     - name: Informations de référence sur l’API JavaScript
+      displayName: signalr
       href: /javascript/api/?view=signalr-js-latest
   - name: Hébergement et mise à l'échelle
+    displayName: signalr
     items:
     - uid: signalr/scale
       name: Vue d'ensemble
+      displayName: signalr
     - name: Service Azure SignalR
+      displayName: signalr
       href: /azure/azure-signalr/signalr-overview
     - uid: signalr/redis-backplane
       name: Fond de panier Redis
+      displayName: signalr
     - uid: signalr/background-services
       name: SignalR avec les services en arrière-plan
   - uid: signalr/configuration
     name: Configuration
+    displayName: signalr
   - uid: signalr/authn-and-authz
     name: Authentification et autorisation
+    displayName: signalr
   - uid: signalr/security
     name: Considérations relatives à la sécurité
+    displayName: signalr
   - uid: signalr/messagepackhubprotocol
     name: Protocole MessagePack Hub
+    displayName: signalr
   - uid: signalr/streaming
     name: Diffusion en continu
+    displayName: signalr
   - uid: signalr/version-differences
     name: Comparer SignalR avec SignalR Core
+    displayName: signalr
   - uid: fundamentals/websockets
     name: WebSockets sans SignalR
+    displayName: signalr
   - uid: signalr/diagnostics
     name: Journalisation et diagnostics
+    displayName: signalr
 - name: Tester, déboguer et dépanner
   items:
   - name: Test unitaire
@@ -507,93 +546,136 @@ items:
   - uid: client-side/using-browserlink
     name: Lien du navigateur
 - name: Hébergement et déploiement
+  displayName: publish
   items:
   - uid: host-and-deploy/index
     name: Vue d'ensemble
+    displayName: azure, deploy, publish
   - name: Héberger sur Azure App Service
+    displayName: deploy, publish
     items:
     - uid: host-and-deploy/azure-apps/index
       name: Vue d'ensemble
+      displayName: azure, deploy, publish
     - uid: tutorials/publish-to-azure-webapp-using-vs
       name: Publier avec Visual Studio
+      displayName: azure, deploy, publish
     - name: Publier avec Visual Studio pour Mac
+      displayName: azure, deploy, publish
       href: /visualstudio/mac/publish-app-svc
     - name: Publier avec les outils CLI
+      displayName: azure, deploy, publish
       href: /azure/app-service/app-service-web-tutorial-dotnetcore-sqldb
     - uid: host-and-deploy/azure-apps/azure-continuous-deployment
       name: Publier avec Visual Studio et Git
+      displayName: azure, deploy, publish
     - name: Déploiement continu avec Azure Pipelines
+      displayName: azure, deploy, publish
       href: /azure/devops/pipelines/get-started-yaml
     - uid: host-and-deploy/aspnet-core-module
       name: Module ASP.NET Core
+      displayName: azure, deploy, publish
     - uid: host-and-deploy/azure-apps/troubleshoot
       name: Résoudre les problèmes
+      displayName: azure, deploy, publish
     - uid: host-and-deploy/azure-iis-errors-reference
       name: Informations de référence sur les erreurs
+      displayName: azure, deploy, publish
   - name: DevOps
     items:
     - uid: azure/devops/index
       name: Vue d'ensemble
+      displayName: azure, deploy, publish
     - uid: azure/devops/tools-and-downloads
       name: Outils et téléchargements
+      displayName: azure, deploy, publish
     - uid: azure/devops/deploy-to-app-service
       name: Déployer sur App Service
+      displayName: azure, deploy, publish
     - uid: azure/devops/cicd
       name: Intégration et déploiement continus
+      displayName: azure, deploy, publish
     - uid: azure/devops/monitor
       name: Surveiller et résoudre les problèmes
+      displayName: azure, deploy, publish
     - uid: azure/devops/next-steps
       name: Étapes suivantes
+      displayName: azure, deploy, publish
   - name: Héberger sur Windows avec IIS
+    displayName: deploy, publish
     items:
     - uid: host-and-deploy/iis/index
       name: Vue d'ensemble
+      displayName: deploy, publish
     - uid: host-and-deploy/aspnet-core-module
       name: Module ASP.NET Core
+      displayName: deploy, publish
     - uid: host-and-deploy/iis/development-time-iis-support
       name: Prise en charge IIS dans Visual Studio
+      displayName: deploy, publish
     - uid: host-and-deploy/iis/modules
       name: Modules IIS
+      displayName: deploy, publish
     - uid: host-and-deploy/iis/troubleshoot
       name: Résoudre les problèmes
+      displayName: deploy, publish
     - uid: host-and-deploy/azure-iis-errors-reference
       name: Informations de référence sur les erreurs
+      displayName: deploy, publish
     - uid: host-and-deploy/iis/transform-webconfig
       name: Transformer web.config
+      displayName: deploy, publish
   - uid: fundamentals/servers/kestrel
     name: Kestrel
+    displayName: deploy, publish, server
   - uid: fundamentals/servers/httpsys
     name: HTTP.sys
+    displayName: deploy, publish, server
   - uid: host-and-deploy/windows-service
     name: Héberger dans un service Windows
+    displayName: deploy, publish
   - uid: host-and-deploy/linux-nginx
     name: Héberger sur Linux avec Nginx
+    displayName: deploy, publish
   - uid: host-and-deploy/linux-apache
     name: Héberger sur Linux avec Apache
+    displayName: deploy, publish
   - name: Héberger dans Docker
+    displayName: deploy, publish
     items:
     - uid: host-and-deploy/docker/index
       name: Vue d'ensemble
+      displayName: deploy, publish, docker
     - name: Créer des images Docker
+      displayName: deploy, publish, docker
       href: /dotnet/core/docker/building-net-docker-images
     - uid: host-and-deploy/docker/visual-studio-tools-for-docker
       name: Visual Studio Tools
+      displayName: deploy, publish, docker
     - name: Publier sur une image Docker
+      displayName: deploy, publish, docker
       href: /azure/vs-azure-tools-docker-hosting-web-apps-in-docker
     - name: Exemples d’images Docker
+      displayName: deploy, publish, docker
       href: https://github.com/dotnet/dotnet-docker/blob/master/samples/aspnetapp/README.md
   - uid: host-and-deploy/proxy-load-balancer
     name: Configuration des proxys et des équilibreurs de charge
+    displayName: deploy, publish
   - uid: host-and-deploy/web-farm
     name: Héberger dans une batterie de serveurs web
+    displayName: deploy, publish
   - uid: host-and-deploy/visual-studio-publish-profiles
     name: Profils de publication Visual Studio
+    displayName: deploy, publish
   - name: Visual Studio pour Mac - Publier dans un dossier
+    displayName: deploy, publish
     href: /visualstudio/mac/publish-folder
   - uid: host-and-deploy/directory-structure
     name: Structure de répertoires
+    displayName: deploy, publish
   - uid: host-and-deploy/health-checks
     name: Contrôles d’intégrité
+    displayName: deploy, publish
   - name: Composants Razor
     items:
     - uid: host-and-deploy/razor-components/index
@@ -601,6 +683,7 @@ items:
     - uid: host-and-deploy/razor-components/configure-linker
       name: Configurer l'éditeur de liens
 - name: Sécurité et identité
+  displayName: authentication, authorization
   items:
   - uid: security/index
     name: Vue d'ensemble
@@ -701,6 +784,7 @@ items:
     - uid: security/authorization/limitingidentitybyscheme
       name: Limiter une identité par schéma
   - name: Protection des données
+    displayName: encryption
     items:
     - uid: security/data-protection/introduction
       name: Vue d'ensemble
@@ -772,6 +856,7 @@ items:
         name: Remplacer machineKey dans ASP.NET
   - uid: security/app-secrets
     name: Protéger les secrets lors du développement
+    displayName: password
   - uid: security/enforcing-ssl
     name: Appliquer HTTPS
   - uid: security/gdpr
@@ -822,6 +907,7 @@ items:
     name: Middleware Écriture
   - uid: fundamentals/middleware/request-response
     name: Opérations de demande et de réponse
+    displayName: middleware
   - uid: fundamentals/url-rewriting
     name: Réécriture d’URL
   - uid: fundamentals/file-providers
@@ -854,17 +940,22 @@ items:
   items:
   - uid: migration/22-to-30
     name: 2.2 à 3.0
+    displayName: migrate, migration
   - uid: migration/21-to-22
     name: 2.1 à 2.2
+    displayName: migrate, migration
   - uid: migration/20_21
     name: 2.0 à 2.1
+    displayName: migrate, migration
   - name: 1.x à 2.0
+    displayName: migrate, migration
     items:
     - uid: migration/1x-to-2x/index
       name: Vue d'ensemble
     - uid: migration/1x-to-2x/identity-2x
       name: Authentification et identité
   - name: D’ASP.NET vers ASP.NET Core
+    displayName: migrate, migration
     items:
     - uid: migration/proper-to-2x/index
       name: Vue d'ensemble
@@ -884,13 +975,14 @@ items:
       name: Des modules HTTP aux intergiciels (middleware)
   - uid: migration/logging-nonaspnetcore
     name: Journalisation (hors ASP.NET Core)
+    displayName: migrate, migration
 - name: Informations de référence sur les API
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: 51fa497e0de917536dc37684cdebc60dec4c19a5
-ms.sourcegitcommit: 6ddd8a7675c1c1d997c8ab2d4498538e44954cac
+ms.openlocfilehash: 755ddaf4262956deb285b48c6c1d0205c25f4ced
+ms.sourcegitcommit: 191d21c1e37b56f0df0187e795d9a56388bbf4c7
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57400695"
+ms.lasthandoff: 03/08/2019
+ms.locfileid: "57665468"
