--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -90,6 +90,10 @@ items:
     - uid: tutorials/signalr-typescript-webpack
       name: SignalR avec TypeScript
       displayName: tutorial
+  - name: Applications d’appel de procédure distante
+    items:
+    - uid: tutorials/grpc/grpc-start
+      name: Bien démarrer avec le service gRPC dans ASP.NET Core
   - name: Accès aux données
     items:
     - name: EF Core avec Razor Pages
@@ -447,6 +451,20 @@ items:
   - uid: signalr/diagnostics
     name: Journalisation et diagnostics
     displayName: signalr
+- name: Applications d’appel de procédure distante
+  items:
+  - uid: grpc/index
+    name: Présentation des services gRPC
+  - uid: grpc/basics
+    name: Services gRPC avec C#
+  - uid: grpc/aspnetcore
+    name: Services gRPC avec ASP.NET Core
+  - uid: grpc/migration
+    name: Migration des services gRPC de C Core vers ASP.NET Core
+  - name: Didacticiels
+    items:
+    - uid: tutorials/grpc/grpc-start
+      name: Bien démarrer avec le service gRPC dans ASP.NET Core
 - name: Tester, déboguer et dépanner
   items:
   - name: Test unitaire
@@ -1060,9 +1078,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: 1430ab85bd40bb3090b5e6a2e313a690bc280f1e
-ms.sourcegitcommit: 32bc00435767189fa3ae5fb8a91a307bf889de9d
+ms.openlocfilehash: d49acf4884da00a6409259f0d9eeca1d16d7d05f
+ms.sourcegitcommit: a467828b5e4eaae291d961ffe2279a571900de23
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57733514"
+ms.lasthandoff: 03/18/2019
+ms.locfileid: "58142400"
