--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -461,6 +461,8 @@ items:
     name: Services gRPC avec ASP.NET Core
   - uid: grpc/migration
     name: Migration des services gRPC de C Core vers ASP.NET Core
+  - uid: grpc/comparison
+    name: Comparaison des services gRPC avec les API HTTP
   - name: Didacticiels
     items:
     - uid: tutorials/grpc/grpc-start
@@ -995,8 +997,11 @@ items:
   items:
   - uid: fundamentals/localization
     name: Vue d'ensemble
+    displayName: globalization, localization
   - uid: fundamentals/portable-object-localization
     name: Localisation d’objet portable
+  - uid: fundamentals/troubleshoot-aspnet-core-localization
+    name: Résoudre les problèmes
 - name: Avancé
   items:
   - uid: fundamentals/middleware/write
@@ -1076,9 +1081,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: 41d79bdbcbe780a579273c55273c3a1e3679017b
-ms.sourcegitcommit: a1c43150ed46aa01572399e8aede50d4668745ca
+ms.openlocfilehash: 7cb263e7f65d0a7c8819312c24c3f61ca24fe649
+ms.sourcegitcommit: 687ffb15ebe65379f75c84739ea851d5a0d788b7
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58327444"
+ms.lasthandoff: 03/26/2019
+ms.locfileid: "58488765"
