commit translated contents

--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -561,10 +561,14 @@ items:
       name: Vue d'ensemble
     - uid: razor-components/get-started
       name: Prise en main
+    - uid: razor-components/hosting-models
+      name: Modèles d'hébergement
     - uid: tutorials/first-razor-components-app
       name: Créer votre première application
     - uid: razor-components/components
       name: Composants
+    - uid: razor-components/forms-validation
+      name: Formulaires et validation
     - uid: razor-components/class-libraries
       name: Bibliothèques de composants
     - uid: razor-components/layouts
@@ -577,14 +581,12 @@ items:
       name: Interopérabilité de JavaScript
     - uid: razor-components/debug
       name: Débogage
-    - uid: razor-components/hosting-models
-      name: Modèles d'hébergement
     - name: Héberger et déployer
       items:
-      - uid: host-and-deploy/razor-components/index
+      - uid: host-and-deploy/razor-components-blazor/index
         name: Vue d'ensemble
-      - uid: host-and-deploy/razor-components/configure-linker
-        name: Configurer l'éditeur de liens
+      - uid: host-and-deploy/razor-components-blazor/razor-components
+        name: Composants Razor
   - name: Applications monopages
     items:
     - name: Blazor
@@ -593,10 +595,14 @@ items:
         name: Vue d'ensemble
       - uid: spa/blazor/get-started
         name: Prise en main
+      - uid: razor-components/hosting-models
+        name: Modèles d'hébergement
       - uid: tutorials/first-razor-components-app
         name: Créer votre première application
       - uid: razor-components/components
         name: Composants
+      - uid: razor-components/forms-validation
+        name: Formulaires et validation
       - uid: razor-components/class-libraries
         name: Bibliothèques de composants
       - uid: razor-components/layouts
@@ -609,13 +615,13 @@ items:
         name: Interopérabilité de JavaScript
       - uid: razor-components/debug
         name: Débogage
-      - uid: razor-components/hosting-models
-        name: Modèles d'hébergement
       - name: Héberger et déployer
         items:
-        - uid: host-and-deploy/razor-components/index
+        - uid: host-and-deploy/razor-components-blazor/index
           name: Vue d'ensemble
-        - uid: host-and-deploy/razor-components/configure-linker
+        - uid: host-and-deploy/razor-components-blazor/blazor
+          name: Blazor
+        - uid: host-and-deploy/razor-components-blazor/configure-linker
           name: Configurer l'éditeur de liens
     - uid: spa/angular
       name: Angular
@@ -774,11 +780,15 @@ items:
   - uid: host-and-deploy/health-checks
     name: Contrôles d’intégrité
     displayName: deploy, publish
-  - name: Composants Razor
+  - name: Composants Razor/Blazor
     items:
-    - uid: host-and-deploy/razor-components/index
+    - uid: host-and-deploy/razor-components-blazor/index
       name: Vue d'ensemble
-    - uid: host-and-deploy/razor-components/configure-linker
+    - uid: host-and-deploy/razor-components-blazor/blazor
+      name: Blazor
+    - uid: host-and-deploy/razor-components-blazor/razor-components
+      name: Composants Razor
+    - uid: host-and-deploy/razor-components-blazor/configure-linker
       name: Configurer l'éditeur de liens
 - name: Sécurité et identité
   displayName: authentication, authorization
@@ -1083,9 +1093,9 @@ items:
   href: /dotnet/api/?view=aspnetcore-2.2
 - name: Collaboration
   href: https://github.com/aspnet/Docs/blob/master/CONTRIBUTING.md
-ms.openlocfilehash: d9ab9beacab19a0e004878d2645b1106bf5dc0d6
-ms.sourcegitcommit: 3e9e1f6d572947e15347e818f769e27dea56b648
+ms.openlocfilehash: 0065707eeaf77327e553b3c43b65e11063edd7e0
+ms.sourcegitcommit: 6bde1fdf686326c080a7518a6725e56e56d8886e
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 03/30/2019
-ms.locfileid: "58751106"
+ms.lasthandoff: 04/08/2019
+ms.locfileid: "59068389"
